--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.2.0",
     "core-js": "^3.10.2",
+    "flatpickr": "^4.6.13",
     "google-maps-api": "^2.0.1",
     "googlemaps": "^1.12.0",
     "vue": "^3.0.11",
+    "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^4.0.6",
     "vuex": "^4.0.0"
   },
